--- a/css/main.css
+++ b/css/main.css
@@ -114,13 +114,16 @@ body {
     float: left;
     list-style-type: none;
     text-align: center;
-    width: 25%;
+    width: 20%;
     cursor: pointer;
     color: #363636;
     text-transform: uppercase;
 }
-.service {
+.miss {
     background-color: gold;
+}
+.service {
+    background-color: orange;
 }
 .talk {
     background-color: greenyellow;
