--- a/css/main.css
+++ b/css/main.css
@@ -91,11 +91,20 @@ body {
     position: absolute;
     width: 1200px;
     z-index: 999;
+    font-size: 20px;
 }
 .text .title {
     color: greenyellow;
     font-size: 34px;
     padding: 0 0 10px 20px;
+}
+
+.text .text-content {
+    display: none;
+    height: 210px;
+    line-height: 1.3;
+    overflow: auto;
+    position: relative;
 }
 
 .menu-bottom {
@@ -105,6 +114,7 @@ body {
     margin-left: -70px;
     position: absolute;
     width: 1300px;
+    font-size: 16px;
 }
 .menu-bottom ul {
     margin-top: 0;
