--- a/css/slider-div.css
+++ b/css/slider-div.css
@@ -40,3 +40,17 @@
     height: 100%;
     background-color: #ffffff;
 }
+.button-next {
+    border: 2px solid #808080;
+    border-radius: 20px;
+    color: #808080;
+    font-size: 30px;
+    font-weight: bolder;
+    padding: 0;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 120px;
+    width: 36px;
+    cursor: pointer;
+}
