--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .imgback {
-    background: url("../images/frend.jpg") no-repeat 100% 80%;
+    background: url("../images/2207.jpg") no-repeat 100% 80%;
     background-size: cover;
     height: 100%;
     width: 100%;
