--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,19 @@ body {
     width: 1200px;
     z-index: 999;
 }
+.person .slogan {
+    color: darkslategrey;
+    position: absolute;
+    top: -58px;
+    left: 40px;
+}
 .person .foto {
     background: url("../images/itsme_011.jpg") no-repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     height: 200px;
     width: 232px;
     float: left;
     margin-right: 20px;
+    border-radius: 20px;
 }
 .person .name {
     font-size: 54px;
@@ -75,11 +82,36 @@ body {
     text-decoration: none;
     text-transform: uppercase;
 }
-
+/*форма записи на консультации*/
+.win_get_consult {
+    background-color: #808080;
+    border: 7px solid #474747;
+    border-radius: 25px;
+    bottom: 230px;
+    display: none;
+    left: 50%;
+    margin-left: -300px;
+    position: absolute;
+    width: 600px;
+    z-index: 9999;
+}
+.win_get_consult_header {
+    background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    font-size: 22px;
+    height: 30px;
+    text-align: center;
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+    margin-bottom: 5px;
+    color: #fff;
+}
+.win_get_consult_footer {
+    font-size: 60%;
+}
 /*нижее поле для текста*/
 .text {
     background-color: #363636;
-    border-top: 1px solid greenyellow;
+    border-top: 1px solid gold;
     bottom: 50px;
     color: #fff;
     display: block;
@@ -95,7 +127,7 @@ body {
     font-size: 20px;
 }
 .text .title {
-    color: greenyellow;
+    color: gold;
     font-size: 34px;
     padding: 0 0 10px 20px;
 }
