--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,7 @@ body {
     width: 1200px;
     z-index: 999;
 }
-.person .slogan {
-    color: darkslategrey;
-    position: absolute;
-    top: -58px;
-    left: 40px;
-}
+
 .person .foto {
     background: url("../images/itsme_011.jpg") no-repeat scroll 0 0 / cover rgba(0, 0, 0, 0);
     height: 200px;
@@ -82,18 +77,56 @@ body {
     text-decoration: none;
     text-transform: uppercase;
 }
+.get_consult_yet {
+    background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border-radius: 20px;
+    color: #ffffff;
+    font-size: 21px;
+    font-weight: bold;
+    padding: 9px 13px;
+    text-decoration: none;
+    text-transform: uppercase;
+    left: 50%;
+    position: relative;
+    margin-left: -100px;
+    line-height: 55px;
+}
 /*форма записи на консультации*/
 .win_get_consult {
     background-color: #808080;
     border: 7px solid #474747;
     border-radius: 25px;
-    bottom: 230px;
+    bottom: 70px;
     display: none;
     left: 50%;
     margin-left: -300px;
     position: absolute;
-    width: 600px;
+    width: 593px;
     z-index: 9999;
+}
+.close {
+    background-color: #a8a8a8;
+    border-radius: 9px;
+    color: #000;
+    position: absolute;
+    right: 7px;
+    font-size: 70%;
+    padding: 0px 6px;
+    margin: 5px;
+    cursor: pointer;
+}
+.win_get_consult_body {
+    padding: 10px 50px 0;
+    font-size: 20px;
+    color: #fff;
+}
+.win_get_consult_after{
+    display: none;
+    padding: 10px 50px;
+    text-align: center;
+}
+.win_get_consult_body input {
+    margin: 2px 0;
 }
 .win_get_consult_header {
     background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -107,6 +140,7 @@ body {
 }
 .win_get_consult_footer {
     font-size: 60%;
+    padding: 8px;
 }
 /*нижее поле для текста*/
 .text {
