--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ body {
     background-color: #808080;
     border: 7px solid #474747;
     border-radius: 25px;
-    bottom: 70px;
+    bottom: 60px;
     display: none;
     left: 50%;
     margin-left: -300px;
@@ -124,9 +124,11 @@ body {
     display: none;
     padding: 10px 50px;
     text-align: center;
+    color: #fff;
 }
-.win_get_consult_body input {
+.win_get_consult_body input, .win_get_consult_body textarea {
     margin: 2px 0;
+    width: 100%;
 }
 .win_get_consult_header {
     background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -139,8 +141,10 @@ body {
     color: #fff;
 }
 .win_get_consult_footer {
-    font-size: 60%;
-    padding: 8px;
+    font-size: 70%;
+    padding: 8px 20px;
+    color: #fff;
+    text-align: justify;
 }
 /*нижее поле для текста*/
 .text {
