--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ body {
 }
 .person .name {
     font-size: 54px;
+    text-shadow: -1px -1px 50px gray;
 }
 .person .subtitle {
     font-size: 100%;
@@ -66,6 +67,16 @@ body {
 .person .mail {
     font-size: 24px;
     color: greenyellow;
+}
+.person .i {
+    font-size: 120%;
+    font-variant: small-caps;
+    margin: 2px 0;
+    font-style: italic;
+    position: absolute;
+    bottom: 0px;
+    left: 255px;
+    text-shadow: 0 0 1px gray;
 }
 .get_consult {
     background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -183,7 +194,7 @@ body {
     position: absolute;
     width: 1200px;
     z-index: 999;
-    font-size: 18px;
+    font-size: 16px;
 }
 .text .title {
     color: gold;
@@ -194,9 +205,17 @@ body {
 .text .text-content {
     display: none;
     height: 210px;
-    line-height: 1.3;
+    line-height: 1.5;
     overflow: auto;
     position: relative;
+    padding-right: 50px;
+}
+.text-content table {
+    border-top: solid 1px grey;
+    padding-left: 70px;
+}
+.text-content td {
+    width: 400px;
 }
 
 .menu-bottom {
