--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
     border-radius: 20px;
 }
 .person .name {
-    font-size: 54px;
+    font-size: 50px;
     text-shadow: -1px -1px 50px gray;
 }
 .person .subtitle {
@@ -69,14 +69,16 @@ body {
     color: greenyellow;
 }
 .person .i {
-    font-size: 120%;
+    font-size: 130%;
     font-variant: small-caps;
     margin: 2px 0;
     font-style: italic;
     position: absolute;
     bottom: 0px;
     left: 255px;
-    text-shadow: 0 0 1px gray;
+    text-shadow: 0 2px 5px black;
+    font-weight: bold;
+    /*border-bottom: solid 1px grey;*/
 }
 .get_consult {
     background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
