--- a/css/main.css
+++ b/css/main.css
@@ -276,3 +276,27 @@ li.active {
     color: #ffff88;
     font-size: 85%;
 }
+
+#service table{
+    float: left;
+}
+.oferta{
+    border: 1px solid orange;
+    border-radius: 10px;
+    margin-top: 54px;
+    padding: 5px;
+    width: 236px;
+    float: right;
+}
+.oferta .price{
+    font-size: 120%;
+    text-align: center;
+}
+.oferta .price span{
+    font-size: 120%;
+    text-align: center;
+}
+.oferta .add{
+    font-size: 80%;
+    text-align: center;
+}
