--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,13 @@ body {
     position: relative;
     overflow: hidden;
 }
+.mobil .imgback{
+    background: url("../images/deti-zakat.jpg") no-repeat 50% 100%;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
 /*персоналия и связь*/
 .person {
     bottom: 390px;
@@ -60,10 +67,26 @@ body {
     float: right;
     top: -40px;
 }
-.mobil .person .action {
-    float: none;
-    top: 50px;
-    left: -200px;
+.mobil .person {
+    bottom: inherit;
+    color: #fff;
+    display: block;
+    height: inherit;
+    left: inherit;
+    margin: 5%;
+    position: absolute;
+    width: 83%;
+    z-index: 999;
+}
+.mobil .position .person .foto {
+    float: left;
+    margin-right: 20px;
+}
+.mobil .position .person .action {
+    position: relative;
+    float: right;
+    top: -69px;
+    right: -60px;
 }
 .person .phone {
 	color: greenyellow;
@@ -78,16 +101,13 @@ body {
     font-variant: small-caps;
     margin: 2px 0;
     font-style: italic;
-    position: absolute;
-    bottom: 0px;
-    left: 255px;
     text-shadow: 0 2px 5px black;
     font-weight: bold;
     /*border-bottom: solid 1px grey;*/
 }
 .mobil .person .i{
-    left: 35px;
-    bottom: -13px;
+    left: inherit;
+    bottom: inherit;
 }
 .get_consult {
     background: linear-gradient(to bottom, #fdc244 0%, #f15b4b 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -208,8 +228,12 @@ body {
     font-size: 16px;
 }
 .mobil .text {
-    width: 444px;
-    bottom: 0;
+    bottom: inherit;
+    left: inherit;
+    margin: 5%;
+    width: 83%;
+    top: 250px;
+    height: 40%;
 }
 .text .title {
     color: gold;
@@ -300,8 +324,12 @@ li.active {
 }
 
 .mobil{
-    left: 50%;
+    left: inherit;
     position: relative;
-    top: 640px;
-    margin-left: -250px;
+    top: inherit;
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
+
