--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,14 @@ body {
 }
 /*персоналия и связь*/
 .person {
-    bottom: 390px;
+    /*bottom: 390px;*/
+    top:35%;
     color: #fff;
     display: block;
     /*height: 300px;*/
     left: 50%;
     margin-bottom: 20px;
-    margin-left: -630px;
+    margin-left: -380px;
     /*opacity: 0.7;
     padding: 10px 30px;*/
     position: absolute;
@@ -61,7 +62,7 @@ body {
     top: -40px;
 }
 .person .phone {
-	color: greenyellow;
+	color: #3d2e1b;
     font-size: 24px;
 }
 .person .mail {
