--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,18 @@ body {
     font-size: 24px;
     color: greenyellow;
 }
+.person .instagram:before {
+    content: "";
+    display: block;
+    background: url('../images/i.jpg') no-repeat;
+    background-size: cover;
+    width: 25px;
+    height: 25px;
+    float: left;
+}
+.person .instagram {
+font-size: 24px;
+}
 .person .i {
     font-size: 130%;
     font-variant: small-caps;
